# OpenGL

./: .clang-format  .gitignore  CMakeLists.txt
assets/shaders/: basic.glsl
src/: main.cpp
src/core/: Application.cpp  Application.h  Window.cpp  Window.h
src/renderer/: BufferLayout.cpp  BufferLayout.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/tests/: Test.h
src/tests/10_test_multiple_shaders/: TestMultipleShaders.cpp  TestMultipleShaders.h
src/tests/1_test_clear_color/: TestClearColor.h
src/tests/2_test_triangle/: TestTriangle.h
src/tests/3_test_wireframe_mode/: TestWireframeMode.cpp  TestWireframeMode.h
src/tests/4_test_multiple_triangles/: TestMultipleTriangles.cpp  TestMultipleTriangles.h
src/tests/5_test_depth/: TestDepth.cpp  TestDepth.h
src/tests/6_test_invalid_shader/: TestInvalidShader.cpp  TestInvalidShader.h
src/tests/7_test_large_index_buffer/: TestLargeIndexBuffer.cpp  TestLargeIndexBuffer.h
src/tests/8_test_color_interpolation/: TestColorInterpolation.cpp  TestColorInterpolation.h
src/tests/9_test_viewport_resize/: TestViewportResize.cpp  TestViewportResize.h
src/tests/test_clear_color/: TestClearColor.cpp  TestClearColor.h
src/tests/test_triangle/: TestTriangle.cpp  TestTriangle.h
